<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.andresmartinez.practica4.Fragdemograf">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="@string/action_demograf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/green"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_populat"
                    android:textSize="17sp"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urb_populat"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rural_populat"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alfabet"
                    android:textSize="17sp"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urb_populat"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rural_populat"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etnograf"
                    android:textSize="17sp"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blan_mezt"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afrocol"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_t_pop"
                    android:textSize="17sp"
                    android:textColor="@color/green"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_urb_pop"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rural_populat"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_t_alf"
                    android:textSize="17sp"
                    android:textColor="@color/green"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_urb_alf"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_rur_alf"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_blanmezt"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_afrocol"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:id="@+id/imageFlag"
        android:src="@drawable/bandera"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/imagename2" />


</LinearLayout>
