<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.andresmartinez.practica4.Bares">

    <TextView
        android:text="@string/action_bars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/green"
        android:layout_gravity="center_horizontal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_bar1"
                        android:textSize="15sp"
                        android:textColor="@color/green"/>

                    <ImageView
                        android:layout_width="135sp"
                        android:layout_height="100dp"
                        android:id="@+id/imageCumbre"
                        android:src="@drawable/b_cumbre"
                        android:layout_weight="1"
                        android:contentDescription="@string/imagename" />

                </LinearLayout>

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:text="@string/d_bar1"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_bar2"
                        android:textSize="15sp"
                        android:textColor="@color/green"/>

                    <ImageView
                        android:layout_width="135sp"
                        android:layout_height="100dp"
                        android:id="@+id/imageLucky"
                        android:src="@drawable/b_lucky"
                        android:layout_weight="1"
                        android:contentDescription="@string/imagename" />

                </LinearLayout>

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:text="@string/d_bar2"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_bar3"
                        android:textSize="15sp"
                        android:textColor="@color/green"/>

                    <ImageView
                        android:layout_width="135sp"
                        android:layout_height="100dp"
                        android:id="@+id/imagePotrillo"
                        android:src="@drawable/b_potrillo"
                        android:layout_weight="1"
                        android:contentDescription="@string/imagename" />

                </LinearLayout>

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:text="@string/d_bar3"
                    android:textSize="15sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>
 </ScrollView>


</LinearLayout>
