<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.andresmartinez.practica4.Fraghoteles">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="@string/action_hotels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/green"
        android:layout_gravity="center_horizontal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_hotel1"
                        android:textSize="25sp"
                        android:textColor="@color/green"/>

                    <ImageView
                        android:layout_width="170sp"
                        android:layout_height="170dp"
                        android:id="@+id/imageCasaB"
                        android:src="@drawable/h_casab"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/imagename" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:text="@string/d_hotel1"
                    android:textSize="20sp"
                    />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_hotel2"
                        android:textSize="25sp"
                        android:textColor="@color/green"/>

                    <ImageView
                        android:layout_width="170sp"
                        android:layout_height="140dp"
                        android:id="@+id/imageAmanec"
                        android:src="@drawable/h_aman"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/imagename" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="250sp"
                    android:layout_height="wrap_content"
                    android:text="@string/d_hotel2"
                    android:textSize="20sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_hotel3"
                        android:textSize="25sp"
                        android:textColor="@color/green"/>

                    <ImageView
                        android:layout_width="170sp"
                        android:layout_height="170dp"
                        android:id="@+id/imageDumar"
                        android:src="@drawable/h_dumar"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/imagename" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="250sp"
                    android:layout_height="wrap_content"
                    android:text="@string/d_hotel3"
                    android:textSize="20sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
